Fix alignment issue

--- a/style/style.css
+++ b/style/style.css
@@ -31,6 +31,9 @@
     font-size: 20px;
     
 }
+.h-2{
+    text-align: justify;
+}
 /*shared button*/
 .btn{
     justify-content: center;
@@ -344,6 +347,7 @@
     
 }
 .big{
+    justify-content: space-between;
     gap:5px;
     margin-bottom:25px;
 }
